@@ -1,3 +1,7 @@
+2006-12-18  Danny Backx <dannybackx@users.sourceforge.net>
+
+	* build-mingw32ce.sh, build-cegcc.sh (build_docs) : Add.
+
 2006-11-18  Danny Backx <dannybackx@users.sourceforge.net>
 
 	* build-mingw32ce.sh, build-cegcc.sh (build_gcc) : Work around
